--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 data.txt filter=lfs diff=lfs merge=lfs -text
 data2.txt filter=lfs diff=lfs merge=lfs -text
+data3.txt filter=lfs diff=lfs merge=lfs -text
+data4.txt filter=lfs diff=lfs merge=lfs -text
