--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ data.txt filter=lfs diff=lfs merge=lfs -text
 data2.txt filter=lfs diff=lfs merge=lfs -text
 data3.txt filter=lfs diff=lfs merge=lfs -text
 data4.txt filter=lfs diff=lfs merge=lfs -text
+data/data5.txt filter=lfs diff=lfs merge=lfs -text
