Added new data set and split off into header
* Split the library into a header
* Added a sentences dataset.
* Worked on making a markov chain based sentence generator

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@ data/data7.txt filter=lfs diff=lfs merge=lfs -text
 data/data8.txt filter=lfs diff=lfs merge=lfs -text
 data/data9.txt filter=lfs diff=lfs merge=lfs -text
 data/data.txt filter=lfs diff=lfs merge=lfs -text
+data/aligned.simple filter=lfs diff=lfs merge=lfs -text
